	with an input dialog instead of being told to go to configuration to set the path.
- When adding edges with Intersector (which is done with Isecalc), the user is prompted for Isecalc's
	path now as well if necessary instead of just ignoring it and not adding the edgelines.
- Added a configuration option for line anti-aliasing.
- BFC red/green view and black edges no longer default to true.
- When the background is dark, the "black edges" option actually means "white edges" now.
- If the vertex snapper finds a vertex closer than 4 pixels, it likely is the vertex being looked for
	and the algorithm can terminate early, hopefully this will save a few cycles on large parts.
- The camera icons now draw real tooltips instead of emulated ones.
- Color icon border now reflects the color's edge color.
- [Linux] Fixed: If an external program is attempted to be launched requiring Wine but with Wine missing,
	there was no error message and instead LDForge took this as no output from the program.
- Fixed: LDForge would sometimes crash during startup over uninitialized data in the GL renderer.
- Fixed: The message log was still written with black text with dark backgrounds.

=================================================
== Changes in version 0.2
=================================================

- Completely rewrote history (undo/redo) code, making it a LOT stabler in the process.
- Added ability to snap to pre-existing vertices while drawing.
- Replaced the radial type with a single action to generate primitives.
- Replaced parts list in subfile item list with a primitive listing. Listing is generated either if
	it's not cached (prims.cfg in configuration directory) or on user demand. Primitives can be categorised
	with the use of a regex-based configuration file, with a valid default which should cater to most users.
- Added an export to file action, moved it + insert from to File menu