@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>717</width>
-    <height>328</height>
+    <height>359</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -146,6 +146,27 @@
                </widget>
               </item>
               <item row="2" column="0">
+               <widget class="QLabel" name="selectedColorLabel">
+                <property name="text">
+                 <string>Selected Color</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QPushButton" name="selColorButton">
+                <property name="whatsThis">
+                 <string>This color is used for the main color.</string>
+                </property>
+                <property name="text">
+                 <string/>
+                </property>
+                <property name="icon">
+                 <iconset resource="../ldforge.qrc">
+                  <normaloff>:/icons/colorselect.png</normaloff>:/icons/colorselect.png</iconset>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
                <widget class="QLabel" name="label_2">
                 <property name="whatsThis">
                  <string/>
@@ -155,7 +176,7 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="1">
+              <item row="3" column="1">
                <widget class="QPushButton" name="backgroundColorButton">
                 <property name="whatsThis">
                  <string>This is the background color for the viewport.</string>
